fixed alignment issues

--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -1,7 +1,6 @@
 .container {
   flex: 0.1;
   display: flex;
-  justify-content: space-around;
   align-items: center;
   color: #247ba0;
 }
@@ -13,9 +12,19 @@
   text-decoration: none;
   font-size: 20px;
   padding: 10px;
-  border-radius: 5px;
+  border-radius: 8px;
   border-bottom: 2px solid #1b98e0;
   background: none;
+  text-align: center;
+}
+
+.container > a {
+  flex: 0.4;
+}
+
+.container > button,
+.container > h2 {
+  flex: 0.3;
 }
 
 .container > a:hover,
